# jornada_de_dadoss

./: 01-Como_agrupar_projeto.txt  README.md  pyproject.toml
anotacoes/01-Como_agrupar_projeto/: 01-configurando_pyenv.txt  02-PIP+VENV.txt  03-pipx.txt  03-poetry.txt
anotacoes/02-git/: 01-config.txt  02-git-criando-chave-privada.txt
anotacoes/03-bibliotecas-importantes/: 01-bibliotecas.txt
github_project/: script.sql
projeto_django/: pyproject.toml
typehint/: ex01.py  ex02.ipynb
