[project]
name = "jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "joao121gf",email = "giovannirs957@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.4.1,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
